--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,12 +52,13 @@
     <TextView
         android:id="@+id/liveFeedText"
         android:layout_width="0dp"
-        android:layout_height="310dp"
+        android:layout_height="343dp"
         android:scrollbars="vertical"
+        android:fadeScrollbars="false"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="7dp"
-        android:layout_marginEnd="7dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginEnd="11dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
