--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,17 +24,15 @@
 
     <Button
         android:id="@+id/usersButton"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_width="170dp"
+        android:layout_height="52dp"
         android:text="Users"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="9dp"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="16dp" />
 
     <TextView
         android:id="@+id/liveFeedText"
@@ -55,15 +53,17 @@
     <Button
         android:id="@+id/syncPageButton"
         android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_height="0dp"
         android:text="Sync"
+        android:layout_marginStart="16dp"
+        app:layout_constraintRight_toLeftOf="@+id/usersButton"
+        tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/usersButton"
-        android:layout_marginStart="9dp"
-        android:layout_marginEnd="9dp"
+        app:layout_constraintBottom_toBottomOf="@+id/usersButton"
+        android:layout_marginEnd="12dp"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="1dp"
-        app:layout_constraintLeft_toLeftOf="@+id/liveFeedText" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/usersButton" />
 
 </android.support.constraint.ConstraintLayout>
